@@ -1,7 +1,6 @@
 TODO
 -----
  - Add ability to load game
- - Add ability to save game
  - Add ability to replay game
  - Define one unique color for each player
  - Add game summary at end of game
