@@ -1,3 +1,6 @@
+2014-10-11:
+    - Added save game ability
+    
 2014-10-10:
     - Added load config from file ability
     - Added save config to file ability
